Updating presentations